Create UI elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,19 @@
     <link rel="stylesheet" href="css/binaryCalculator.css">
     <script src="js/binaryCalculator.js" type="text/javascript" defer> </script>
 </head>
+
 <body>
-    
+    <div id="res">Results here</div>
+    <div id="btns">
+        <button id="btn">0</button>
+        <button id="btn">1</button>
+        <button id="btn">C</button>
+        <button id="btn">=</button>
+        <button id="btn">+</button>
+        <button id="btn">-</button>
+        <button id="btn">*</button>
+        <button id="btn">/</button>
+    </div>
 </body>
+
 </html>
