--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <div id="res">Results here</div>
     <div id="btns">
-        <button id="btn">0</button>
-        <button id="btn">1</button>
-        <button id="btn">C</button>
-        <button id="btn">=</button>
-        <button id="btn">+</button>
-        <button id="btn">-</button>
-        <button id="btn">*</button>
-        <button id="btn">/</button>
+        <button id="btn0">0</button>
+        <button id="btn1">1</button>
+        <button id="btnClr">C</button>
+        <button id="btnEql">=</button>
+        <button id="btnSum">+</button>
+        <button id="btnSub">-</button>
+        <button id="btnMul">*</button>
+        <button id="btnDiv">/</button>
     </div>
 </body>
 
