--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <input type="text" id="res">
     <div id="btns">
-        <button class="btn bg-light-green brown" id="btn0">0</button>
-        <button class="btn bg-light-green brown" id="btn1">1</button>
-        <button class="btn bg-dark-green white" id="btnClr">C</button>
-        <button class="btn bg-dark-green white" id="btnEql">=</button>
-        <button class="btn bg-black red" id="btnSum">+</button>
-        <button class="btn bg-black red" id="btnSub">-</button>
-        <button class="btn bg-black red" id="btnMul">*</button>
-        <button class="btn bg-black red" id="btnDiv">/</button>
+        <button id="btn0">0</button>
+        <button id="btn1">1</button>
+        <button id="btnClr">C</button>
+        <button id="btnEql">=</button>
+        <button id="btnSum">+</button>
+        <button id="btnSub">-</button>
+        <button id="btnMul">*</button>
+        <button id="btnDiv">/</button>
     </div>
 </body>
 
