--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <input type="text" id="res">
+    <div id="res"></div>
     <div id="btns">
         <button id="btn0">0</button>
         <button id="btn1">1</button>
