--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binary Calculator</title>
     <link rel="stylesheet" href="css/binaryCalculator.css">
-    <script src="js/binaryCalculator.js" type="text/javascript" defer> </script>
+    <script src="js/binaryCalculator.js" type="text/javascript" defer>
+    </script>
 </head>
 
 <body>
-    <div id="res"></div>
-    <div id="btns">
-        <button id="btn0">0</button>
-        <button id="btn1">1</button>
-        <button id="btnClr">C</button>
-        <button id="btnEql">=</button>
-        <button id="btnSum">+</button>
-        <button id="btnSub">-</button>
-        <button id="btnMul">*</button>
-        <button id="btnDiv">/</button>
+    <div class="container">
+        <div class="display" id="res"></div>
+        <div class="btns" id="btns">
+            <button class="btn" id="btn0">0</button>
+            <button class="btn" id="btn1">1</button>
+            <button class="btn" id="btnClr">C</button>
+            <button class="btn" id="btnEql">=</button>
+            <button class="btn" id="btnSum">+</button>
+            <button class="btn" id="btnSub">-</button>
+            <button class="btn" id="btnMul">*</button>
+            <button class="btn" id="btnDiv">/</button>
+        </div>
     </div>
 </body>
 
