add package.json file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
     <div class="container">
+        <header style="font-size: 16px;font-weight:bolder;">Binary Calculator</header>
+
         <div class="display" id="res"></div>
         <div class="btns" id="btns">
             <button class="btn" id="btn0">0</button>
